change backend for caida data, add expression example

--- a/ui/frontend/index.html
+++ b/ui/frontend/index.html
@@ -48,7 +48,7 @@
         /* 输入框样式 */
         #searchInput {
             padding: 10px; /* 内边距 */
-            width: 400px; /* 宽度 */
+            width: 600px; /* 宽度 */
             border: 1px solid #ccc; /* 边框样式 */
             border-radius: 5px; /* 边框圆角 */
             box-sizing: border-box; /* 盒模型 */
@@ -121,7 +121,7 @@
 <body>
     <div id="searchContainer">
         <!-- 搜索输入框 -->
-        <input type="text" id="searchInput" placeholder="Enter search term">
+        <input type="text" id="searchInput" placeholder="Enter search expresion: eg. srcip = 10.1.0.0/16 || (srcport == 80 && dstip == 192.1.100.1)">
         
         <!-- 搜索按钮 -->
         <button id="searchButton">Search</button>
