change timestamp format

--- a/ui/frontend/index.html
+++ b/ui/frontend/index.html
@@ -126,9 +126,9 @@
         <!-- 搜索按钮 -->
         <button id="searchButton">Search</button>
 
-        <input type="text" id="startTimeInput" placeholder="Enter search start time">
+        <input type="text" id="startTimeInput" placeholder="Enter search start time: eg. YY-mm-dd HH:MM:SS.ff">
 
-        <input type="text" id="endTimeInput" placeholder="Enter search end time">
+        <input type="text" id="endTimeInput" placeholder="Enter search end time: eg. YY-mm-dd HH:MM:SS.ff">
 
         <button id="downloadButton">Download File</button>
     </div>
